S&R: Handle also complex lookahead and lookbehind

When we are safety-comparing the match range to the regexp, remove also
a bit more complex lookahead/lookbehind with nested parenthesis

BUG: 497875